--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
     <br>
 
     <label class="input_label">
-    	<span class="input_label_text">URL</span>
+    	<span class="input_label_text">URLs</span>
     	<input id="input__url" class="input_box" type="text" value="https://www.dtac.co.th/postpaid/products/package.html"/>
     </label>
 
