dtac fup and csv test

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,8 @@
 
     <button id="button__scrape" class="button">Scrape Web</button>
 
+    <a id="stealth_downloader" class="hidden"></a>
+
     <script src="jsx/jwt-decode.js"></script>
 	<script src="jsx/jquery.min.js"></script>
 	<script src="jsx/babel.min.js"></script>
