front end table

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1 class="header">Web Scraper for Telecom</h1>
 
+    <!--
     <label class="input_label">
     	<span class="input_label_text">Keyword</span>
     	<input id="input__keyword" class="input_box" type="text" value="บาท"/>
@@ -30,8 +31,34 @@
     		<option value="2">AIS</option>
     	</select>
     </label>
+    -->
 
     <button id="button__scrape" class="button">Scrape Web</button>
+
+    <div id="table_container">
+    <table id="data_displayer_table">
+    <!--<thead>
+        <tr>
+            <th>name</th>
+            <th>height</th>
+            <th>place</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Monte Falco</td>
+            <td>1658</td>
+            <td>Parco Foreste Casentinesi</td>
+        </tr>
+        <tr>
+            <td>Monte Falterona</td>
+            <td>1654</td>
+            <td>Parco Foreste Casentinesi</td>
+        </tr>
+        </tbody>
+        -->
+    </table> 
+    </div>
 
     <a id="stealth_downloader" class="hidden"></a>
 
