--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,10 @@
     </label>
     -->
 
+    <div class="buttons_container">
     <button id="button__scrape" class="button">Scrape Web</button>
+    <button id="button__export" class="button" disabled>Export Data</button>
+    </div>
 
     <div id="table_container">
     <table id="data_displayer_table">
